wrapper system, add path wrapper